--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,10 @@
     <link rel="stylesheet" media="all" href="css/all.min.css" type="text/css">
     <base href="/">
     <!-- The Scripts -->
-    <script src="socket.io/socket.io.js" async></script>
-    <script src="js/openpgp.min.js" async></script>
-    <script src="js/forge.min.js" async></script>
-    <script src="js/app.min.js" async></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/openpgp.min.js"></script>
+    <script src="js/forge.min.js"></script>
+    <script src="js/app.min.js"></script>
   </head>
 
   <body wo-key-shortcuts>
